--- a/index.html
+++ b/index.html
@@ -1,12 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Coming Soon | Kristin & MacGregor</title>
-    <link href="css/main.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>Coming Soon | Kristin & MacGregor</title>
+
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
+        integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+
+  <!-- Font Awesome 5 Pro -->
+  <script defer src="vendor/fontawesome-pro-5/svg-with-js/js/fontawesome-all.min.js"></script>
+
+  <!-- Material Design Lite -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="section first" id="first-section">
+  <div class="container">
+    <nav class="nav justify-content-center">
+      <a href="#" class="nav-link">Home</a>
+      <a href="#event-details" class="nav-link">Event Details</a>
+      <a class="nav-link" href="#">
+        <img src="img/name-logo.png">
+      </a>
+      <a href="#wedding-party" class="nav-link">Wedding Party</a>
+      <a href="#gallery" class="nav-link">Gallery</a>
+    </nav>
+  </div>
 
+</div>
+
+<div class="section second" id="second-section">
+  <div class="">
+    <div class="row">
+      <div class="col-sm-6">
+        <img src="img/resized/small/just-us-600.jpg" class="img-fluid">
+      </div>
+      <div class="col-sm-6 our-story-text">
+        <h2 class="text-center">Our Story</h2>
+        <p>A southern boy met a northern girl and he liked to stick it in her...</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section third" id="third-section"></div>
+
+<div class="section fourth" id="fourth-section">
+  <div class="">
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center">Event Details</h1>
+        <div class="row">
+          <div class="col text-right">
+            <h2>Accommodations</h2>
+            <h3>Request Our Room Block</h3>
+            <ul class="list-unstyled">
+              <li>
+                <h4>Sheraton Hotel</h4>
+                <br>
+                <a href="//www.starwoodmeeting.com/events/start.action?id=1801116117&key=29C3C162">
+                  Book a Room!
+                </a>
+              </li>
+              <li>
+                <h4>Hilton Garden Inn</h4>
+                <br>
+                <a href="#">
+                  Book a Room!
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col">
+            <h2>Ceremony & Reception</h2>
+            <h3>September 1st, 2018</h3>
+            <h4>
+              Seacoast Science Center
+              <br>
+              in Odiorne Point State Park
+            </h4>
+            <address>
+              570 Ocean Boulevard
+              Rye, NH 03870-2104
+            </address>
+            <p>
+              <a href="https://www.google.com/maps/dir//Seacoast+Science+Center,+570+Ocean+Blvd,+Rye,+NH+03870/@43.0453539,-70.7161617,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e2c754fe00508d:0x4fb3c150bf5e79!2m2!1d-70.713973!2d43.04535">
+                Get Directions!
+              </a>
+            </p>
+            <p>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.81356894974!2d-70.71616168440984!3d43.045353899539805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e2c754fe00508d%3A0x4fb3c150bf5e79!2sSeacoast+Science+Center!5e0!3m2!1sen!2sus!4v1515858781643"
+                      width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </p>
+            <p>
+              <a href="//www.seacoastsciencecenter.org/site-rental/weddings/">
+                Visit their website!
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-sm-6">
+        <img src="img/resized/sheraton.jpg" class="img-fluid">
+      </div>
+      <div class="col-sm-6">
+        <img src="img/resized/hilton.jpg" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="section fifth" id="fifth-section">
+  <div class="text-center top-space-50">
+    <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored animateToTop">
+      <i class="material-icons">keyboard_arrow_up</i>
+    </button>
+  </div>
+
+</div>
+
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"
+        integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+        crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
+
+<div hidden>
+  <img src="img/family.jpg" onload="swapFullImage('first-section');">
+  <img src="img/proposal.jpg" onload="swapFullImage('third-section');">
+</div>
 </body>
 </html>
