added some other stuff

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script defer src="vendor/fontawesome-pro-5/svg-with-js/js/fontawesome-all.min.js"></script>
 
     <!-- Fancybox -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css"/>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Risque|Great+Vibes" rel="stylesheet">
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class="section first" id="first-section">
-    <div class="container">
+    <div class="container-fluid">
         <nav class="nav justify-content-center top-nav">
             <!--<a href="#" class="nav-link"><h3>Home</h3></a>-->
             <a href="#" class="nav-link scroll-to-section event-details" data-section="fourth-section">Event Details</a>
@@ -246,11 +246,40 @@
                     </div>
                 </div>
                 <div class="row top-space-50">
-                    <div class="col text-center">
-                        <h1>Transportation</h1>
-                        <h3>
+                    <div class="col">
+                        <h1 class="text-center">Transportation</h1>
+                        <h4>
+                            <span class="badge badge-info arial">Prior to the ceremony</span>
+                            - buses will be available to bring people from downtown Portsmouth (probably from the
+                            Sheraton and/or Hilton Garden Inn) to the Seacoast Science Center!
+                        </h4>
+                        <h4>
+                            <span class="badge badge-info arial">Last 2 hours of the ceremony</span>
+                            - buses will be available to bring people back to downtown Portsmouth!
+                        </h4>
 
-                        </h3>
+                        <hr>
+
+
+                        <div class="alert alert-warning" role="alert">
+                            <h3 class="text-center alert-heading">
+                                *** Important Notice ***
+                            </h3>
+                            <h5 class="arial">
+                                Unfortunately, all cars left at the Seacoast Science Center after the reception will be
+                                <strong>TOWED</strong>!
+                                This is a New Hampshire state park policy.
+                                Despite our best efforts, this was not something they would budge on. So please
+                                take us up on the bus rides to/from downtown Portsmouth.
+                                Even if you aren't staying in Portsmouth, you can still park your car downtown and
+                                take the bus just to be safe! This is going to be one hell of a good time, so please
+                                don't drink and drive!
+                            </h5>
+                           <!-- <hr>
+                            <h3 class="mb-0 text-center arial">
+                                This is going to be one hell of a good time, so please don't drink and drive!
+                            </h3>-->
+                        </div>
                     </div>
                 </div>
             </div>
