--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Coming Soon | Kristin & MacGregor</title>
+    <title>Kristin & MacGregor</title>
 
 
     <!-- Bootstrap -->
@@ -21,40 +21,48 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Risque|Great+Vibes" rel="stylesheet">
 
-
+    <link rel="stylesheet" href="css/utils.css">
+    <link rel="stylesheet" href="css/background-images.css">
+    <link rel="stylesheet" href="css/media-queries.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="section first" id="first-section">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <nav class="nav justify-content-center top-nav">
-                    <!--<a href="#" class="nav-link"><h3>Home</h3></a>-->
-                    <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">Event Details</a>
-                    <a href="#fourth-section" class="nav-link scroll-to-section accommodations" data-section="accommodations">
+                    <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">Event
+                        Details</a>
+                    <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
                         Accommodations
                     </a>
                 </nav>
             </div>
-            <div class="col-md-2">
-                <nav class="nav justify-content-center top-nav text-center top-space-15 text-danger">
-                    <h1 class="great-vibes display-4 visible-lg">
-                        Kristin<br>&<br>MacGregor
-                    </h1>
-                    <h1 class="great-vibes hidden-lg">
-                        Kristin<br>&<br>MacGregor
-                    </h1>
-                </nav>
-            </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <nav class="nav justify-content-center top-nav">
-                    <a href="#fourth-section" class="nav-link scroll-to-section transportation" data-section="transportation">
+                    <a href="#" class="nav-link scroll-to-section transportation" data-section="transportation">
                         Transportation</a>
                     <a href="img/family.jpg" data-fancybox="gallery" data-caption="Caption #1" class="nav-link gallery">
                         Gallery
                     </a>
                 </nav>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="justify-content-center text-center text-danger">
+                    <h1 class="great-vibes display-4 visible-lg visible-xl">
+                        Kristin<br>&<br>MacGregor
+                    </h1>
+                    <h1 class="great-vibes visible-md">
+                        Kristin<br>&<br>MacGregor
+                    </h1>
+                    <h2 class="great-vibes visible-sm">
+                        Kristin<br>&<br>MacGregor
+                    </h2>
+                </div>
             </div>
         </div>
         <!--<nav class="nav justify-content-center top-nav">
@@ -97,17 +105,16 @@
 <div class="section fourth" id="fourth-section">
     <div class="container">
         <h1 class="text-center display-4 risque main-header" id="event-details">Event Details</h1>
-
         <hr>
 
         <div class="section text-center">
-            <h1>Ceremony & Reception</h1>
+            <h1 class="text-danger">Ceremony & Reception</h1>
             <h4>
                 September 1st, 2018
                 <span class="badge badge-warning arial">5pm - 11pm</span>
             </h4>
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-10">
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/SSC_3.jpeg" alt="Card image">
                         <div class="card-img-overlay">
@@ -130,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-10">
                     <div class="google-maps">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.81356894974!2d-70.71616168440984!3d43.045353899539805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e2c754fe00508d%3A0x4fb3c150bf5e79!2sSeacoast+Science+Center!5e0!3m2!1sen!2sus!4v1515858781643"
                                 width="400" height="300" frameborder="0" style="border:0"
@@ -144,10 +151,10 @@
         <hr>
 
         <div class="=section text-center">
-            <h1 id="accommodations">Accommodations</h1>
+            <h1 id="accommodations" class="text-danger">Accommodations</h1>
             <h4>Be sure to request our room block!</h4>
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row justify-content-center">
+                <div class="col-lg-6 col-md-10">
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/resized/sheraton.jpg" alt="Card image">
                         <div class="card-img-overlay">
@@ -169,7 +176,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-10">
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/resized/hilton.jpg" alt="Card image">
                         <div class="card-img-overlay">
@@ -195,17 +202,47 @@
 
         <hr>
 
-        <div class="section transport-section">
-            <h1 class="text-center">Transportation</h1>
-            <h4>
-                <span class="badge badge-info arial">Prior to the ceremony</span>
-                - buses will be available to bring people from downtown Portsmouth (probably from the
-                Sheraton and/or Hilton Garden Inn) to the Seacoast Science Center!
-            </h4>
-            <h4>
-                <span class="badge badge-info arial">Last 2 hours of the ceremony</span>
-                - buses will be available to bring people back to downtown Portsmouth!
-            </h4>
+        <div class="section transport-section" id="transportation">
+            <h1 class="text-center text-danger">Transportation for EVERYONE!</h1>
+            <div class="row">
+                <div class="col-md-7 arial">
+                    <h3 class="">
+                        <span class="badge badge-warning arial">
+                            <i class="fas fa-bus"></i> 4pm - 5pm
+                        </span>
+                       
+                    </h3>
+                    <h5 class="text-center">
+                        <strong class="text-center">
+                            *** Pickup at the Sheraton Hotel ***
+                        </strong>
+                    </h5>
+                    <h5>
+                        Buses (and maybe a trolley if you're cool) will be available to shuttle people from downtown
+                        Portsmouth to the Seacoast Science Center!
+                    </h5>
+
+                    <hr>
+                    <h3>
+                        <span class="badge badge-warning arial">
+                            <i class="fas fa-bus"></i>
+                            10pm - 12pm
+                        </span>
+                    </h3>
+                    <h5>
+                        Buses will shuttle people back to downtown Portsmouth!
+                    </h5>
+                </div>
+                <div class="col-md-5">
+                    <img src="img/trolley.jpg" class="img-thumbnail">
+                </div>
+            </div>
+
+            <div class="alert alert-info text-center top-space-15" role="alert">
+                <i class="fas fa-info-circle"></i>
+                Check back here every one in a while in case any information such as bus schedules
+                or pick-up locations has changed.
+            </div>
 
             <hr>
 
@@ -229,7 +266,6 @@
                  </h3>-->
             </div>
         </div>
-
 
 
     </div>
