added thumbnails, etc.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <div class="row">
             <div class="col-md-6">
                 <nav class="nav justify-content-center top-nav">
-                    <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">Event
-                        Details</a>
+                    <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
+                        Event Details
+                    </a>
                     <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
                         Accommodations
                     </a>
@@ -43,7 +44,7 @@
                 <nav class="nav justify-content-center top-nav">
                     <a href="#" class="nav-link scroll-to-section transportation" data-section="transportation">
                         Transportation</a>
-                    <a href="img/family.jpg" data-fancybox="gallery" data-caption="Caption #1" class="nav-link gallery">
+                    <a href="gallery/" class="nav-link gallery">
                         Gallery
                     </a>
                 </nav>
@@ -116,7 +117,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="card bg-dark text-white">
-                        <img class="card-img" src="img/SSC_3.jpeg" alt="Card image">
+                        <img class="card-img" src="img/event/SSC_3.jpeg" alt="Card image">
                         <div class="card-img-overlay">
                             <h2 class="card-title">Seacoast Science Center</h2>
 
@@ -234,13 +235,13 @@
                     </h5>
                 </div>
                 <div class="col-md-5">
-                    <img src="img/trolley.jpg" class="img-thumbnail">
+                    <img src="img/event/trolley.jpg" class="img-thumbnail">
                 </div>
             </div>
 
             <div class="alert alert-info text-center top-space-15" role="alert">
                 <i class="fas fa-info-circle"></i>
-                Check back here every one in a while in case any information such as bus schedules
+                Check back here every once in a while in case any information such as bus schedules
                 or pick-up locations has changed.
             </div>
 
