made booking room buttons disabled, get everything ready for the initial push live

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -38,9 +38,9 @@
             </h5>
         </div>
         <div class="col">
-            <h3>
+            <h1>
                 Photo Gallery
-            </h3>
+            </h1>
         </div>
         <div class="col">
             <h5 class="arial">
@@ -91,6 +91,18 @@
             <a href="../img/other/sleeping.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/sleeping-600.png" alt=""/>
             </a>
+            <a href="../img/extra/us-boat.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/us-boat-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/life-jacket.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/life-jacket-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/jax-sunglasses.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/jax-sunglasses-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/first-photo.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/first-photo-600.png" alt=""/>
+            </a>
         </div>
         <div class="col-md-4">
             <a href="../img/engagement/just-us-far.jpg" data-fancybox="gallery" data-caption="">
@@ -108,6 +120,18 @@
             <a href="../img/other/regal-pup.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/regal-pup-600.png" alt=""/>
             </a>
+            <a href="../img/extra/uga-halloween.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/uga-halloween-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/kristin-visor.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/kristin-visor-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/uga-halloween-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/uga-halloween-2-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/airplane-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/airplane-2-600.png" alt=""/>
+            </a>
         </div>
         <div class="col-md-4">
             <a href="../img/engagement/family-on-rocks.jpg" data-fancybox="gallery" data-caption="">
@@ -124,6 +148,31 @@
             </a>
             <a href="../img/other/dead-dog.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/dead-dog-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/three-of-us.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/three-of-us-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/relaxing.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/relaxing-600.png" alt=""/>
+            </a>
+            <a href="../img/extra/koozies.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/koozies-600.png" alt=""/>
+            </a>
+
+            <a href="../img/extra/beach.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/beach-600.png" alt=""/>
+            </a>
+
+            <a href="../img/extra/at-p-and-l.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/at-p-and-l-600.png" alt=""/>
+            </a>
+        </div>
+    </div>
+    <div class="row top-space-50">
+        <div class="col text-center text-danger">
+            <h1 class="display-4">Just one last thing...</h1>
+            <a href="../img/extra/uga-sec-champs.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/uga-sec-champs.jpg" alt=""/>
             </a>
         </div>
     </div>
