--- a/index.html
+++ b/index.html
@@ -27,10 +27,21 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+    <strong>
+        <i class="fas fa-exclamation-triangle"></i>
+        WARNING!
+    </strong>
+    This site is still under construction and details regarding room blocks,
+    bus schedules and pickup locations might change.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i class="fas fa-times-circle"></i>
+    </button>
+</div>
 <div class="section first" id="first-section">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row no-gutters text-center top-row text-white">
+            <div class="col">
                 <nav class="nav justify-content-center top-nav">
                     <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
                         Event Details
@@ -40,7 +51,23 @@
                     </a>
                 </nav>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-auto top-space-15">
+                <div class="justify-content-center text-center text-danger">
+                    <h1 class="great-vibes display-4 visible-xl">
+                        Kristin<br>&<br>MacGregor
+                    </h1>
+                    <h1 class="great-vibes visible-lg visible-md">
+                        Kristin<br>&<br>MacGregor
+                    </h1>
+                    <h2 class="great-vibes visible-sm">
+                        Kristin<br>&<br>MacGregor
+                    </h2>
+                    <h3 class="great-vibes visible-xs">
+                        Kristin<br>&<br>MacGregor
+                    </h3>
+                </div>
+            </div>
+            <div class="col">
                 <nav class="nav justify-content-center top-nav">
                     <a href="#" class="nav-link scroll-to-section transportation" data-section="transportation">
                         Transportation</a>
@@ -50,40 +77,6 @@
                 </nav>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col">
-                <div class="justify-content-center text-center text-danger">
-                    <h1 class="great-vibes display-4 visible-lg visible-xl">
-                        Kristin<br>&<br>MacGregor
-                    </h1>
-                    <h1 class="great-vibes visible-md">
-                        Kristin<br>&<br>MacGregor
-                    </h1>
-                    <h2 class="great-vibes visible-sm">
-                        Kristin<br>&<br>MacGregor
-                    </h2>
-                </div>
-            </div>
-        </div>
-        <!--<nav class="nav justify-content-center top-nav">
-            &lt;!&ndash;<a href="#" class="nav-link"><h3>Home</h3></a>&ndash;&gt;
-            <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">Event Details</a>
-            <a href="#fourth-section" class="nav-link scroll-to-section accommodations" data-section="accommodations">
-                Accommodations
-            </a>
-            <a class="nav-link text-center no-link" href="#">
-                &lt;!&ndash;<img src="img/name-logo.png">&ndash;&gt;
-                <h1 class="great-vibes">
-                    Kristin<br>&<br>MacGregor
-                </h1>
-            </a>
-            <a href="#fourth-section" class="nav-link scroll-to-section transportation" data-section="transportation">
-                Transportation</a>
-            <a href="img/family.jpg" data-fancybox="gallery" data-caption="Caption #1" class="nav-link gallery">
-                Gallery
-            </a>
-        </nav>-->
     </div>
 </div>
 
@@ -165,7 +158,7 @@
                                 Portsmouth, NH 03801
                             </address>
                             <a href="//www.starwoodmeeting.com/events/start.action?id=1801116117&key=29C3C162"
-                               class="btn btn-danger">
+                               class="btn btn-danger disabled" disabled>
                                 <i class="fas fa-paper-plane"></i>
                                 Book a Room
                             </a>
@@ -186,7 +179,7 @@
                                 100 High Street
                                 Portsmouth, NH 03801
                             </address>
-                            <a href="#" class="btn btn-danger">
+                            <a href="#" class="btn btn-danger disabled" disabled>
                                 <i class="fas fa-paper-plane"></i>
                                 Book a Room
                             </a>
@@ -211,7 +204,7 @@
                         <span class="badge badge-warning arial">
                             <i class="fas fa-bus"></i> 4pm - 5pm
                         </span>
-                       
+
                     </h3>
                     <h5 class="text-center">
                         <strong class="text-center">
