--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="alert alert-info text-center top-space-15" role="alert">
                 <i class="fas fa-info-circle"></i>
                 Check back here every once in a while in case any information such as bus schedules
-                or pick-up locations has changed.
+                or pick-up locations changes.
             </div>
 
             <hr>
