--- a/gallery/index.html
+++ b/gallery/index.html
@@ -48,25 +48,6 @@
             </h5>
         </div>
     </div>
-
- <!--   <div class="container my-container">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark align-items-center text-center">
-            <ul class="navbar-nav float-left">
-                <li class="nav-item">
-                    <a class="nav-link" href="//www.kristinandmacgregor.com">
-                        <h5>
-                            <i class="fas fa-chevron-double-left"></i>
-                            Go Back
-                        </h5>
-                    </a>
-                </li>
-            </ul>
-            <h3>Gallery</h3>
-            <h5 class="navbar-text text-white text-center">
-                Click on image to zoom
-            </h5>
-        </nav>
-    </div>-->
 </div>
 
 
@@ -144,7 +125,7 @@
                 <img class="img-fluid" src="../img/thumbs/kristin-kneeling-600.png" alt=""/>
             </a>
             <a href="../img/other/babies.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/other/babies.png" alt=""/>
+                <img class="img-fluid" src="../img/other/babies.jpg" alt=""/>
             </a>
             <a href="../img/other/dead-dog.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/dead-dog-600.png" alt=""/>
@@ -158,16 +139,115 @@
             <a href="../img/extra/koozies.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/koozies-600.png" alt=""/>
             </a>
-
             <a href="../img/extra/beach.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/beach-600.png" alt=""/>
             </a>
-
             <a href="../img/extra/at-p-and-l.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/at-p-and-l-600.png" alt=""/>
             </a>
         </div>
     </div>
+
+
+    <!--  Uses full size images as previews as well -->
+    <!--<div class="row no-gutters text-center">
+        <div class="col-md-4">
+            <a href="../img/engagement/family.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/family.jpg" alt=""/>
+            </a>
+            <a href="../img/engagement/just-us-kristin-looking.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/just-us-kristin-looking.jpg" alt=""/>
+            </a>
+            <a href="../img/engagement/front-back.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/front-back.jpg" alt=""/>
+            </a>
+            <a href="../img/other/us.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/us.jpg" alt=""/>
+            </a>
+            <a href="../img/other/babies-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/babies-2.jpg" alt=""/>
+            </a>
+            <a href="../img/other/sleeping.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/sleeping.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/us-boat.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/us-boat.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/life-jacket.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/life-jacket.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/jax-sunglasses.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/jax-sunglasses.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/first-photo.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/first-photo.jpg" alt=""/>
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="../img/engagement/just-us-far.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/just-us-far.jpg" alt=""/>
+            </a>
+            <a href="../img/engagement/just-kristin.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/just-kristin.jpg" alt=""/>
+            </a>
+            <a href="../img/other/boat.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/boat.jpg" alt=""/>
+            </a>
+            <a href="../img/other/working-dog.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/working-dog.jpg" alt=""/>
+            </a>
+            <a href="../img/other/regal-pup.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/regal-pup.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/uga-halloween.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/uga-halloween.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/kristin-visor.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/kristin-visor.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/uga-halloween-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/uga-halloween-2.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/airplane-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/airplane-2.jpg" alt=""/>
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="../img/engagement/family-on-rocks.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/family-on-rocks.jpg" alt=""/>
+            </a>
+            <a href="../img/engagement/kissing-with-jax.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/kissing-with-jax.jpg" alt=""/>
+            </a>
+            <a href="../img/engagement/kristin-kneeling.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/engagement/kristin-kneeling.jpg" alt=""/>
+            </a>
+            <a href="../img/other/babies.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/babies.jpg" alt=""/>
+            </a>
+            <a href="../img/other/dead-dog.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/other/dead-dog.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/three-of-us.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/three-of-us.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/relaxing.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/relaxing.jpg" alt=""/>
+            </a>
+            <a href="../img/extra/koozies.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/koozies.jpg" alt=""/>
+            </a>
+
+            <a href="../img/extra/beach.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/beach.jpg" alt=""/>
+            </a>
+
+            <a href="../img/extra/at-p-and-l.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/extra/at-p-and-l.jpg" alt=""/>
+            </a>
+        </div>
+    </div>-->
+
     <div class="row top-space-50">
         <div class="col text-center text-danger">
             <h1 class="display-4">Just one last thing...</h1>
@@ -188,12 +268,44 @@
     </h5>
 </div>
 
+<div class="hidden">
+    <img src="../img/engagement/family.jpg" alt=""/>
+    <img src="../img/engagement/just-us-kristin-looking.jpg" alt=""/>
+    <img src="../img/engagement/front-back.jpg" alt=""/>
+    <img src="../img/other/us.jpg" alt=""/>
+    <img src="../img/other/babies-2.jpg" alt=""/>
+    <img src="../img/other/sleeping.jpg" alt=""/>
+    <img src="../img/extra/us-boat.jpg" alt=""/>
+    <img src="../img/extra/life-jacket.jpg" alt=""/>
+    <img src="../img/extra/jax-sunglasses.jpg" alt=""/>
+    <img src="../img/extra/first-photo.jpg" alt=""/>
 
-<script
-        src="https://code.jquery.com/jquery-1.12.4.min.js"
+    <img src="../img/engagement/just-us-far.jpg" alt=""/>
+    <img src="../img/engagement/just-kristin.jpg" alt=""/>
+    <img src="../img/other/boat.jpg" alt=""/>
+    <img src="../img/other/working-dog.jpg" alt=""/>
+    <img src="../img/other/regal-pup.jpg" alt=""/>
+    <img src="../img/extra/uga-halloween.jpg" alt=""/>
+    <img src="../img/extra/kristin-visor.jpg" alt=""/>
+    <img src="../img/extra/uga-halloween-2.jpg" alt=""/>
+    <img src="../img/extra/airplane-2.jpg" alt=""/>
+
+    <img src="../img/engagement/family-on-rocks.jpg" alt=""/>
+    <img src="../img/engagement/kissing-with-jax.jpg" alt=""/>
+    <img src="../img/engagement/kristin-kneeling.jpg" alt=""/>
+    <img src="../img/other/babies.jpg" alt=""/>
+    <img src="../img/other/dead-dog.jpg" alt=""/>
+    <img src="../img/extra/three-of-us.jpg" alt=""/>
+    <img src="../img/extra/relaxing.jpg" alt=""/>
+    <img src="../img/extra/koozies.jpg" alt=""/>
+    <img src="../img/extra/beach.jpg" alt=""/>
+    <img src="../img/extra/at-p-and-l.jpg" alt=""/>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
         crossorigin="anonymous"></script>
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -204,14 +316,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
 
-
 <script src="../js/main.js"></script>
-
-<div hidden>
-    <!--<img src="img/resized/large/family.png" onload="swapFullImage('first-section');">
-    <img src="img/resized/large/proposal.png" onload="swapFullImage('third-section');">
-    <img src="img/resized/large/ceremony.png" onload="swapFullImage('fifth-section');">-->
-</div>
 
 
 </body>
