--- a/index.html
+++ b/index.html
@@ -46,7 +46,37 @@
 </div>
 <div class="section first" id="first-section">
     <div class="container-fluid">
-        <div class="row no-gutters text-center top-row text-white">
+        <div class="row no-gutters text-center top-row text-white visible-xs">
+            <div class="col-md-auto top-space-15">
+                <div class="justify-content-center text-center text-danger">
+                    <h3 class="great-vibes">
+                        Kristin<br>&<br>MacGregor
+                    </h3>
+                </div>
+            </div>
+            <div class="col">
+                <nav class="nav justify-content-center top-nav">
+                    <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
+                        Event Details
+                    </a>
+                    <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
+                        Accommodations
+                    </a>
+                </nav>
+            </div>
+
+            <div class="col">
+                <nav class="nav justify-content-center top-nav">
+                    <a href="#" class="nav-link scroll-to-section transportation" data-section="transportation">
+                        Transportation</a>
+                    <a href="gallery/" class="nav-link gallery">
+                        Gallery
+                    </a>
+                </nav>
+            </div>
+        </div>
+
+        <div class="row no-gutters text-center top-row text-white hidden-xs">
             <div class="col">
                 <nav class="nav justify-content-center top-nav">
                     <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
@@ -59,10 +89,7 @@
             </div>
             <div class="col-md-auto top-space-15">
                 <div class="justify-content-center text-center text-danger">
-                    <h1 class="great-vibes display-4 visible-xl">
-                        Kristin<br>&<br>MacGregor
-                    </h1>
-                    <h1 class="great-vibes visible-lg visible-md">
+                    <h1 class="great-vibes visible-xl visible-lg visible-md">
                         Kristin<br>&<br>MacGregor
                     </h1>
                     <h2 class="great-vibes visible-sm">
@@ -83,6 +110,8 @@
                 </nav>
             </div>
         </div>
+
+
     </div>
 </div>
 
@@ -118,8 +147,8 @@
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/event/SSC_3.jpeg" alt="Card image">
                         <div class="card-img-overlay">
-                            <h2 class="card-title">Seacoast Science Center</h2>
-
+                            <h2 class="card-title hidden-xs">Seacoast Science Center</h2>
+                            <h3 class="card-title visible-xs">Seacoast Science Center</h3>
                             <address class="card-text alert alert-light hotel-address">
                                 570 Ocean Boulevard
                                 Rye, NH 03870
@@ -127,7 +156,7 @@
                             <a class="btn btn-success" target="_blank"
                                href="//www.seacoastsciencecenter.org/site-rental/weddings/">
                                 <i class="fas fa-external-link-alt"></i>
-                                Visit their website
+                                More Info
                             </a>
                             <a class="btn btn-primary"
                                href="//www.google.com/maps/dir//Seacoast+Science+Center,+570+Ocean+Blvd,+Rye,+NH+03870/@43.0453539,-70.7161617,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e2c754fe00508d:0x4fb3c150bf5e79!2m2!1d-70.713973!2d43.04535">
@@ -158,7 +187,8 @@
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/resized/sheraton.jpg" alt="Card image">
                         <div class="card-img-overlay">
-                            <h2 class="card-title">Sheraton Hotel</h2>
+                            <h2 class="card-title hidden-xs">Sheraton Hotel</h2>
+                            <h3 class="card-title visible-xs">Sheraton Hotel</h3>
                             <address class="card-text alert alert-light hotel-address">
                                 250 Market Street
                                 Portsmouth, NH 03801
@@ -180,7 +210,8 @@
                     <div class="card bg-dark text-white">
                         <img class="card-img" src="img/resized/hilton.jpg" alt="Card image">
                         <div class="card-img-overlay">
-                            <h2 class="card-title">Hilton Garden Inn</h2>
+                            <h2 class="card-title hidden-xs">Hilton Garden Inn</h2>
+                            <h3 class="card-title visible-xs">Hilton Garden Inn</h3>
                             <address class="card-text alert alert-light hotel-address">
                                 100 High Street
                                 Portsmouth, NH 03801
@@ -272,7 +303,7 @@
 </div>
 
 
-<div class="section fifth text-center" id="fifth-section">
+<div class="section fifth text-center hidden-xs hidden-sm visible-md-plus" id="fifth-section">
     <h1 class="display-2 see-yall-there">
         SEE Y'ALL HERE!
         <br>
