honed in the background images for mobile devices, etc. and start a new page for the registry

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div class="section first" id="first-section">
-    <div class="row text-center align-items-center top-row text-white">
+    <div class="row no-gutters text-center align-items-center top-row text-white gallery-nav">
         <div class="col">
             <h5>
                 <a href="//www.kristinandmacgregor.com" class="back-link">
@@ -50,8 +50,8 @@
             </h1>
         </div>
         <div class="col">
-            <h5 class="arial">
-                (click on an image to zoom)
+            <h5 class="arial click">
+                (click an image to zoom)
             </h5>
         </div>
     </div>
@@ -275,6 +275,22 @@
     </h5>
 </div>
 
+
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
+
+<script src="../js/main.js"></script>
+
 <div class="hidden">
     <img src="../img/engagement/family.jpg" alt=""/>
     <img src="../img/engagement/just-us-kristin-looking.jpg" alt=""/>
@@ -308,23 +324,6 @@
     <img src="../img/extra/beach.jpg" alt=""/>
     <img src="../img/extra/at-p-and-l.jpg" alt=""/>
 </div>
-
-
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"
-        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-        crossorigin="anonymous"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
-
-<script src="../js/main.js"></script>
-
 
 </body>
 </html>
