staged out registry page

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -38,7 +38,7 @@
     <div class="row no-gutters text-center align-items-center top-row text-white gallery-nav">
         <div class="col">
             <h5>
-                <a href="//www.kristinandmacgregor.com" class="back-link">
+                <a href="../" class="back-link">
                     <i class="fas fa-chevron-double-left"></i>
                     Go Back
                 </a>
@@ -265,15 +265,15 @@
     </div>
 </div>
 
-<div class="section sixth" id="sixth-section">
-    <h5 class="text-center">
+<nav class="navbar navbar-dark bg-dark justify-content-center">
+    <h5 class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
     </h5>
-</div>
+</nav>
 
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
