--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
                     Accommodations
                 </a>
-                <a href="#" class="nav-link scroll-to-section transportation" data-section="transportation">
+                <a href="registry/" class="nav-link registry">
                     Registry</a>
                 <a href="gallery/" class="nav-link gallery">
                     Gallery
@@ -314,15 +314,15 @@
     </h1>
 </div>
 
-<div class="section sixth" id="sixth-section">
-    <h5 class="text-center">
+<nav class="navbar navbar-dark bg-dark justify-content-center">
+    <h5 class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
     </h5>
-</div>
+</nav>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
