--- a/registry/index.html
+++ b/registry/index.html
@@ -38,7 +38,7 @@
     <div class="row no-gutters text-center align-items-center top-row text-white gallery-nav">
         <div class="col">
             <h5>
-                <a href="//www.kristinandmacgregor.com" class="back-link">
+                <a href="../" class="back-link">
                     <i class="fas fa-chevron-double-left"></i>
                     Go Back
                 </a>
@@ -49,18 +49,55 @@
                 Wedding Registry
             </h1>
         </div>
+        <div class="col"></div>
     </div>
 </div>
 
-<div class="section sixth" id="sixth-section">
-    <h5 class="text-center">
+<div class="section" id="registry-section">
+    <div class="container">
+        <div class="alert alert-danger text-center" role="alert">
+            <h1 class="alert-heading">
+                <i class="fas fa-frown"></i>
+                Oops...
+            </h1>
+            <h3 class="arial">
+                We haven't yet registered anywhere, but when we do we'll start adding them here!
+            </h3>
+        </div>
+<!--
+        <div class="jumbotron text-center">
+            <h1 class="display-4 text-danger ">
+                Oops...
+                <span class="smiley-color">
+                    <i class="fas fa-frown"></i>
+
+                </span>
+            </h1>
+            <h3>
+            </h3>
+            &lt;!&ndash;<p class="lead">
+                We haven't yet registered anywhere, but when we do we'll start adding them here!
+            </p>&ndash;&gt;
+            &lt;!&ndash;<hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>&ndash;&gt;
+        </div>
+-->
+    </div>
+
+</div>
+
+<nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-center">
+    <h5 class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
     </h5>
-</div>
+</nav>
 
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
