--- a/registry/index.html
+++ b/registry/index.html
@@ -35,22 +35,18 @@
 </head>
 <body>
 <div class="section first" id="first-section">
-    <div class="row no-gutters text-center align-items-center top-row text-white gallery-nav">
-        <div class="col">
-            <h5>
-                <a href="../" class="back-link">
-                    <i class="fas fa-chevron-double-left"></i>
-                    Go Back
-                </a>
-            </h5>
-        </div>
-        <div class="col">
-            <h1 class="">
+
+    <nav class="navbar navbar-dark bg-dark">
+        <a href="../" class="back-link">
+            <i class="fas fa-chevron-double-left"></i>
+            Go Back
+        </a>
+        <div class="col text-center">
+            <h1 class="navbar-text text-white">
                 Wedding Registry
             </h1>
         </div>
-        <div class="col"></div>
-    </div>
+    </nav>
 </div>
 
 <div class="section" id="registry-section">
@@ -61,7 +57,7 @@
                 Oops...
             </h1>
             <h3 class="arial">
-                We haven't yet registered anywhere, but when we do we'll start adding them here!
+                We haven't registered anywhere yet, but when we do we'll start adding them here!
             </h3>
         </div>
 <!--
