move gallery and registry css files to their respective directories

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="../css/gallery-background-images.css">
     <link rel="stylesheet" href="../css/media-queries.css">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/gallery.css">
+    <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
 <div class="section first" id="first-section">
@@ -72,9 +72,9 @@
     </div>-->
 </div>
 
-<div class="alert alert-info collapse text-center arial " id="collapse-alert">
+<div class="alert alert-info collapse text-center arial gallery-alert" id="collapse-alert">
     <i class="fas fa-info-circle"></i>
-    Click on an image to to zoom, start a slide show, and more...
+    Click on images to view them full screen, start a slide show, and more...
     <a class="close" data-toggle="collapse" href="#collapse-alert" role="button" aria-expanded="false" aria-controls="collapse-alert">
         <i class="fas fa-times-circle"></i>
     </a>
