--- a/registry/index.html
+++ b/registry/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="../css/gallery-background-images.css">
     <link rel="stylesheet" href="../css/media-queries.css">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/registry.css">
+    <link rel="stylesheet" href="registry.css">
 </head>
 <body>
 <div class="section first" id="first-section">
