create temporary registry page

--- a/registry/temp.html
+++ b/registry/temp.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="registry.css">
 </head>
 <body>
+
 <nav class="navbar navbar-dark bg-dark">
     <a href="../" class="back-link">
         <i class="fas fa-chevron-double-left"></i>
@@ -46,38 +47,27 @@
     </div>
 </nav>
 
-<div class="section" id="registry-section">
+<div class="section top-space-15" id="registry-section">
     <div class="container">
-        <div class="alert alert-danger text-center" role="alert">
-            <h1 class="alert-heading">
-                <i class="fas fa-frown"></i>
-                Oops...
-            </h1>
-            <h3 class="arial">
-                We haven't registered anywhere yet, but when we do we'll start adding them here!
-            </h3>
-        </div>
-<!--
-        <div class="jumbotron text-center">
-            <h1 class="display-4 text-danger ">
-                Oops...
-                <span class="smiley-color">
-                    <i class="fas fa-frown"></i>
+        <div class="row">
+            <div class="col">
+                <div class="card bg-dark">
+                    <img class="card-img-top" src="img/amazon.jpg" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <a class="btn btn-lg btn-danger" target="_blank"
+                           href="https://www.amazon.com/wedding/macgregor-thompson-kristin-palladino-rye-september-2018/registry/3AU5HE9PE7N1R">
+                            <i class="fas fa-paper-plane"></i>
+                            Go to registry
+                        </a>
+                    </div>
+                </div>
 
-                </span>
-            </h1>
-            <h3>
-            </h3>
-            &lt;!&ndash;<p class="lead">
-                We haven't yet registered anywhere, but when we do we'll start adding them here!
-            </p>&ndash;&gt;
-            &lt;!&ndash;<hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>&ndash;&gt;
+            </div>
+            <div class="col">
+            </div>
+            <div class="col">
+            </div>
         </div>
--->
     </div>
 
 </div>
